<resources>
    <string name="app_name">E-certificates</string>
    <string name="text1">1.Le pattern MVC signifie :</string>
    <string name="check1">Multiple version combined</string>
    <string name="check2">Model view controles</string>
    <string name="check3">Main value compiles</string>
    <string name="check4">Mandatory validated controls </string>
    <string name="text2">2.La syntaxe $[x] est permise dans une JSP :</string>

</resources>