<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="389dp"
        android:layout_height="30dp"
        android:text="@string/text1"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.165" />

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="374dp"
        android:layout_height="56dp"
        android:backgroundTint="#2D2F31"
        android:buttonTint="@drawable/checkbox_selector"
        android:text="@string/check1"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.621"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.216" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="367dp"
        android:layout_height="54dp"
        android:buttonTint="@drawable/checkbox_selector"
        android:text="@string/check2"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.522"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.316" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="372dp"
        android:layout_height="62dp"
        android:buttonTint="@drawable/checkbox_selector"
        android:text="@string/check3"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.589"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.415" />

    <CheckBox
        android:id="@+id/checkBox4"
        android:layout_width="380dp"
        android:layout_height="67dp"
        android:buttonTint="@drawable/checkbox_selector"
        android:text="@string/check4"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.741"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.537" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="384dp"
        android:layout_height="30dp"
        android:text="@string/text2"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.626" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="355dp"
        android:layout_height="125dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.41"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.788">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="353dp"
            android:layout_height="wrap_content"
            android:text="OUI"
            android:textColorHighlight="#8BC34A"
            android:textColorHint="#8BC34A"
            android:textColorLink="#8BC34A"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="357dp"
            android:layout_height="wrap_content"
            android:text="NON"
            android:textColorLink="#8BC34A"
            android:textSize="20sp" />
    </RadioGroup>

    <Button
        android:id="@+id/sendi"
        android:layout_width="165dp"
        android:layout_height="70dp"
        android:backgroundTint="#8BC34A"
        android:text="Quitter"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.109"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.888" />

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar"
        android:layout_width="401dp"
        android:layout_height="55dp"
        android:background="@drawable/border"
        android:minHeight="?attr/actionBarSize"
        android:textSize="20sp"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.073"
        app:navigationIcon="@drawable/ic_menu_foreground"
        app:title="@string/app_name" />

    <Button
        android:id="@+id/sendii"
        android:layout_width="159dp"
        android:layout_height="70dp"
        android:backgroundTint="#8BC34A"
        android:text="Suivant"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.869"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.888" />

</androidx.constraintlayout.widget.ConstraintLayout>